--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.0.3",
+    "@prisma/client": "^5.14.0",
     "framer-motion": "^11.2.6",
     "next": "14.2.3",
     "react": "^18",
@@ -31,6 +32,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
+    "prisma": "^5.14.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
