--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "jest",
     "test:watch": "jest --watch"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "dependencies": {
     "@headlessui/react": "^2.0.3",
     "@prisma/client": "^5.14.0",
