--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,6 @@
 {
-  "extends": "next/core-web-vitals",
+  "extends": ["plugin:@typescript-eslint/recommended", "next/core-web-vitals"],
   "rules": {
     // Additional, per-project rules...
-    "no-unused-vars": "error"
   }
 }
