--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "postcss": "^8",
     "prisma": "^5.14.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^7.12.0"
   }
 }
