--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "prisma:studio": "prisma studio"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
@@ -16,6 +17,8 @@
   "dependencies": {
     "@headlessui/react": "^2.0.3",
     "@prisma/client": "^5.14.0",
+    "prisma": "^5.14.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.2.6",
     "next": "14.2.3",
     "react": "^18",
@@ -35,7 +38,6 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
-    "prisma": "^5.14.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "typescript-eslint": "^7.12.0"
