--- a/package.json
+++ b/package.json
@@ -16,13 +16,23 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.0.3",
+    "@hookform/resolvers": "^3.6.0",
     "@prisma/client": "^5.14.0",
-    "prisma": "^5.14.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.6",
+    "lucide-react": "^0.390.0",
     "next": "14.2.3",
+    "prisma": "^5.14.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.51.5",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
