update shadcn config

--- a/components.json
+++ b/components.json
@@ -5,8 +5,8 @@
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.ts",
-    "css": "src/app/globals.css",
-    "baseColor": "neutral",
+    "css": "src/styles/globals.css",
+    "baseColor": "brand",
     "cssVariables": false,
     "prefix": ""
   },
