--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@headlessui/react": "^2.0.3",
     "@hookform/resolvers": "^3.6.0",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-context-menu": "^2.2.1",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
