add build step and caching to workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,25 @@
 name: CI
 
-on: [push]
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
-  # Run node tests with Jest
+  unit-test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
+      - run: npm ci
+      - name: test
+        run: npm test
+      - name: lint
+        run: npm run lint
   build:
     runs-on: ubuntu-latest
     steps:
@@ -11,8 +27,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "20"
+          cache: "npm"
       - run: npm ci
-      - name: test
-        run: npm test
-      - name: lint
-        run: npm run lint
+      - name: build
+        run: npm run build
