add DATABASE_URL env var to workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,4 +30,6 @@ jobs:
           cache: "npm"
       - run: npm ci
       - name: build
+        env:
+          DATABASE_URL: "file:./test.db"
         run: npm run build
