fix duplicate decks being made in e2e tests

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint",
     "test": "jest",
     "test:watch": "jest --watch",
-    "prisma:studio": "prisma studio"
+    "test:e2e": "playwright test",
+    "prisma:studio": "prisma studio",
+    "prisma:seed": "prisma db seed"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
