create a composite github action

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -8,15 +8,18 @@ jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+    env:
+      DATABASE_URL: "file:./dev.db"
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
-      - name: Install dependencies
-        run: npm ci
+      - uses: ./.github/actions/build.yaml
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
+      - name: Seed the database
+        run: npm run prisma:seed
       - name: Run Playwright tests
         run: npx playwright test
       - uses: actions/upload-artifact@v4
