--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,10 +28,5 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: "20"
-          cache: "npm"
-      - run: npm ci
-      - name: Set up Prisma and apply migrations
-        run: npx prisma migrate deploy
-      - name: build
-        run: npm run build
+          node-version: lts/*
+      - uses: ./.github/actions/build.yaml
