--- a/.github/actions/build-app-action/action.yml
+++ b/.github/actions/build-app-action/action.yml
@@ -1,7 +1,11 @@
-steps:
-  - name: Install dependencies
-      run: npm ci
-  - name: Set up Prisma and apply migrations
-    run: npx prisma migrate deploy
-  - name: build
-    run: npm run build
+name: 'Build App'
+
+runs:
+  using: "composite"
+  steps:
+    - name: Install dependencies
+        run: npm ci
+    - name: Set up Prisma and apply migrations
+      run: npx prisma migrate deploy
+    - name: build
+      run: npm run build
