--- a/.github/actions/build-app-action/action.yml
+++ b/.github/actions/build-app-action/action.yml
@@ -1,10 +1,10 @@
-name: 'Build App'
+name: "Build App"
 
 runs:
   using: "composite"
   steps:
     - name: Install dependencies
-        run: npm ci
+      run: npm ci
     - name: Set up Prisma and apply migrations
       run: npx prisma migrate deploy
     - name: build
