--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.6",
+    "jose": "^5.8.0",
     "lucide-react": "^0.390.0",
     "next": "14.2.3",
     "react": "^18",
