fix failing test

--- a/.github/actions/build-app-action/action.yml
+++ b/.github/actions/build-app-action/action.yml
@@ -6,6 +6,7 @@ runs:
     - name: Download deps
       uses: bahmutov/npm-install@v1
     - name: Copy test env vars
+      shell: bash
       run: cp .env.example .env
     - name: Set up Prisma and apply migrations
       shell: bash
