--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 ## Database
-DATABASE_URL="file:./data.db"
+POSTGRES_PRISMA_URL="postgres://postgres:localDev@localhost:5432/memcards"
+POSTGRES_URL_NON_POOLING="postgres://postgres:localDev@localhost:5432/memcards"
