add SESSION_SECRET to env.examle

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 ## Database
 POSTGRES_PRISMA_URL="postgres://postgres:localDev@localhost:5432/memcards"
 POSTGRES_URL_NON_POOLING="postgres://postgres:localDev@localhost:5432/memcards"
+
+
+SESSION_SECRET="secret"
