initial setup for Storybook

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "test:e2e": "playwright test",
     "prisma:studio": "prisma studio",
     "prisma:seed": "prisma db seed",
-    "vercel": "prisma generate && prisma migrate deploy && next build"
+    "vercel": "prisma generate && prisma migrate deploy && next build",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
@@ -44,7 +46,19 @@
   },
   "devDependencies": {
     "@axe-core/playwright": "^4.10.0",
+    "@chromatic-com/storybook": "^1.9.0",
     "@playwright/test": "^1.46.1",
+    "@storybook/addon-a11y": "^8.2.9",
+    "@storybook/addon-essentials": "^8.2.9",
+    "@storybook/addon-interactions": "^8.2.9",
+    "@storybook/addon-links": "^8.2.9",
+    "@storybook/addon-onboarding": "^8.2.9",
+    "@storybook/addon-themes": "^8.2.9",
+    "@storybook/blocks": "^8.2.9",
+    "@storybook/nextjs": "^8.2.9",
+    "@storybook/react": "^8.2.9",
+    "@storybook/test": "^8.2.9",
+    "@storybook/test-runner": "^0.19.1",
     "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
@@ -56,10 +70,12 @@
     "@types/react-dom": "^18.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "eslint-plugin-storybook": "^0.8.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "prisma": "^5.19.0",
+    "storybook": "^8.2.9",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "typescript-eslint": "^7.12.0"
