--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "prisma:studio": "prisma studio",
     "prisma:seed": "prisma db seed",
     "vercel": "prisma generate && prisma migrate deploy && next build",
-    "storybook": "storybook dev -p 6006",
+    "storybook": "storybook dev -p 6006 --config-dir ./src/components/.storybook",
     "build-storybook": "storybook build"
   },
   "prisma": {
@@ -23,12 +23,13 @@
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
     "@prisma/client": "^5.19.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-context-menu": "^2.2.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@vercel/analytics": "^1.3.1",
     "bcrypt": "^5.1.1",
