add storybook job to github workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,6 +57,27 @@ jobs:
       - name: test
         run: npm test
 
+  storybook:
+    name: 📚 Storybook
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
+      - name: Download deps
+        uses: bahmutov/npm-install@v1
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+      - name: Build Storybook
+        run: npm run storybook:build
+      - name: Serve Storybook and run tests
+        run: |
+          npx concurrently -k -s first -n "SB,TEST" -c "magenta,blue" \
+            "npx http-server storybook-static --port 6006 --silent" \
+            "npx wait-on tcp:127.0.0.1:6006 && npm run storybook:test"
+
   playwright:
     name: 🎭 Playwright
     timeout-minutes: 60
