update when to run CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ on:
       - "tsconfig.json"
       - "package.json"
       - "package-lock.json"
-      - ".github/workflows/ci.yml"
+      - ".github/workflows/**"
       - ".github/actions/**"
 
 jobs:
