--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,17 @@
 {
-  "tabWidth": 2,
-  "useTabs": false,
-  "semi": false
+	"tabWidth": 2,
+	"useTabs": false,
+	"semi": true,
+	"singleQuote": false,
+	"plugins": [
+		"prettier-plugin-tailwindcss",
+		"@trivago/prettier-plugin-sort-imports"
+	],
+	"importOrder": [
+		"^(react|next?/?([a-zA-Z/]*))$",
+		"<THIRD_PARTY_MODULES>",
+		"^@*/(.*)$",
+		"^[./]"
+	],
+	"importOrderSortSpecifiers": true
 }
