--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,5 +2,7 @@
   "extends": ["next/core-web-vitals", "next/typescript", "prettier"],
   "rules": {
     // Additional, per-project rules...
+    "@typescript-eslint/no-import-type-side-effects": "error",
+    "@typescript-eslint/consistent-type-imports": "error"
   }
 }
